tests/models/struct/named/i64/fail/min_length.stderr
error: Support condition is gt, ge, lt, le, alias, default and validate
 --> tests/models/struct/named/i64/fail/min_length.rs:5:5
  |
5 |     value: i64,
  |     ^^^^^
